SIGSEGV in ciVirtualCallTypeData::translate_from

XMLWordPrintable

    • b26
    • x86, aarch64, riscv
    • generic

        The following test crashed in the JDK17 CI:

        jdk/internal/jimage/JImageOpenTest.java

        Here's a snippet from the log file:

        #section:main
        ----------messages:(4/210)----------
        command: main -Djdk.image.map.all=false JImageOpenTest
        reason: User specified action: run main/othervm -Djdk.image.map.all=false JImageOpenTest
        Mode: othervm [/othervm specified]
        elapsed time (seconds): 0.708
        ----------configuration:(0/0)----------
        ----------System.out:(21/1157)----------
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x0000000105ea9d32, pid=8269, tid=23043
        #
        # JRE version: Java(TM) SE Runtime Environment (17.0+10) (build 17-ea+10-LTS-717)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (17-ea+10-LTS-717, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
        # Problematic frame:
        # V [libjvm.dylib+0x2a9d32] ciVirtualCallTypeData::translate_from(ProfileData const*)+0x92
        #
        # Core dump will be written. Default location: core.8269
        #
        # An error report file with more information is saved as:
        # /System/Volumes/Data/mesos/work_dir/slaves/a4f8fba9-f017-4328-b286-c66b6a97143d-S6108/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0ad57bbc-6fd4-46d2-a23f-b4a90d9c004b/runs/0af9a24f-a153-40e3-a2be-e3c5cc4c5145/testoutput/test-support/jtreg_open_test_jdk_tier1_part1/scratch/3/hs_err_pid8269.log

        [error occurred during error reporting (), id 0xe0000000, Internal Error (./open/src/hotspot/share/ci/ciMethodData.cpp:693)]

        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        ----------System.err:(0/0)----------
        ----------rerun:(37/5960)*----------

        Here's the crashing thread's stack:

        --------------- T H R E A D ---------------

        Current thread (0x00007fc7d2808a00): JavaThread "C1 CompilerThread0" daemon [_thread_in_vm, id=23043, stack(0x000070000d505000,0x000070000d605000)]


        Current CompileTask:
        C1: 622 711 2 java.util.concurrent.ConcurrentHashMap::setTabAt (20 bytes)

        Stack: [0x000070000d505000,0x000070000d605000], sp=0x000070000d604530, free space=1021k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0x2a9d32] ciVirtualCallTypeData::translate_from(ProfileData const*)+0x92
        V [libjvm.dylib+0x2a6aaf] ciMethodData::load_data()+0x40f
        V [libjvm.dylib+0x2a2d7c] ciMethod::ensure_method_data(methodHandle const&)+0x8c
        V [libjvm.dylib+0x2a2eeb] ciMethod::ensure_method_data()+0x14b
        V [libjvm.dylib+0x1d0878] Compilation::compile_java_method()+0x58
        V [libjvm.dylib+0x1d0dac] Compilation::compile_method()+0x11c
        V [libjvm.dylib+0x1d11d8] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x228
        V [libjvm.dylib+0x1d2851] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x61
        V [libjvm.dylib+0x31bfe2] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x552
        V [libjvm.dylib+0x31b89a] CompileBroker::compiler_thread_loop()+0x2ea
        V [libjvm.dylib+0x9e9e2d] JavaThread::thread_main_inner()+0xcd
        V [libjvm.dylib+0x9e8261] Thread::call_run()+0x71
        V [libjvm.dylib+0x87ce37] thread_native_entry(Thread*)+0x157
        C [libsystem_pthread.dylib+0x6109] _pthread_start+0x94
        C [libsystem_pthread.dylib+0x1b8b] thread_start+0xf


        siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00000000001ddf70

        I'm starting this bug out as a P2 since this is a Tier1 failure.

          1. replay_pid39388.log
            400 kB
          2. hs_err_pid39388.log
            69 kB
          3. hs_err_pid84796.log
            140 kB
          4. replay_pid84796.log
            0.8 kB
          5. hs_err_pid8103.log
            98 kB
          6. replay_pid8103.log
            0.6 kB

              Assignee:
              Dean Long
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: