8261837: SIGSEGV in ciVirtualCallTypeData::translate_from

Backport-of: 1bb250c9e6b65d1a7a2b90eeb7d6e3a936fb8e8e